<resources>
    <string name="app_name">ToDoist</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_project">AddProjectActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_list_priorities">ListPrioritiesActivity</string>
    <string name="color_code">Color Name</string>
    <string name="new_project_name">New Project Name</string>
    <string name="initial_color_code">Red</string>
    <string name="hint_task_name">Please enter task</string>
    <string name="project_label">Project</string>
    <string name="project_name">Name</string>
    <string name="priority_label">Priority</string>
    <string name="priority_name">Priority 1</string>
    <string name="empty_task_list">There are no tasks for this project, click button below to create one.</string>
    <string name="empty_project_list">There are o projects in database, create one by clicking the add button.</string>
    <string name="add_project_txt">Add project</string>
    <string name="task_name">Task Name</string>
    <string name="done_button">Done</string>
</resources>
